--- a/_data/books.yml
+++ b/_data/books.yml
@@ -1,29 +1,16 @@
-- title: Ready Player One
-  author: Ernest Cline
-  image: readyplayerone.jpg
+- title: Призрак
+  author: Ю Несбё
+  image: fantom.png
   link: https://frayalisia.github.io/books/2018/02/21/fantom
 
-- title: The Revenant
-  author: Michael Punke
-  image: therevenant.jpg
-  link:
+- title: Дом странных детей
+  author: Ренсом Риггз
+  image: missperegrin.png
+  link: https://frayalisia.github.io/books/2018/02/16/missperegrineshomeforpeculiarchildren
 
-- title: Wool
-  author: Hugh Howey
-  image: wool.jpg
-  link:
+- title: Ю Несбё
+  author: Снеговик
+  image: showman.png
+  link: https://frayalisia.github.io/books/2018/02/04/snowman
 
-- title: The Martian
-  author: Andy Weir
-  image: themartian.jpg
-  link:
 
-- title: The Man in the High Castle
-  author: Philip K Dick
-  image: themaninthehighcastle.jpg
-  link:
-
-- title: Deception Point
-  author: Dan Brown
-  image: deceptionpoint.jpg
-  link:
