--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ email: frayalisia@gmail.com
 facebook_url: https://www.facebook.com/vikki.tsygankova
 instagram_url: https://www.instagram.com/miss_vixy/
 github_url: https://github.com/frayalisia/
+vk_url: https://vk.com/id197828866
 
 sass:
   style: compressed
