--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ facebook_url: https://www.facebook.com/vikki.tsygankova
 instagram_url: https://www.instagram.com/miss_vixy/
 github_url: https://github.com/frayalisia/
 vk_url: https://vk.com/id197828866
+telegram_url: https://t.me/miss_vixy
 
 sass:
   style: compressed
